End of Section 3

--- a/DatingApp.API/appsettings.Development.json
+++ b/DatingApp.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings":{
+    "Token": "super secret key"
+  },
   "ConnectionStrings":{
     "DefaultConnection": "Data Source=.\\SQL2017;Initial Catalog=datingapp;User ID=sa;Password=1234;MultipleActiveResultSets=True"
   },
